updated through lab 23

--- a/CoffeeShop/Views/Home/Index.cshtml
+++ b/CoffeeShop/Views/Home/Index.cshtml
@@ -6,5 +6,6 @@
 
 <div class="text-center">
     <h1>Welcome to the Coffee Shop</h1>
-    <h4>Please register <a href="https://localhost:44304/Home/Registration">here</a>.</h4>
+    <h4>New user? Please register <a href="/Home/Registration">here</a>.</h4>
+    <h4>Existing user? You can login <a href="/Home/Login">here</a>.</h4>
 </div>
