--- a/CoffeeShop/Views/Home/Shop.cshtml
+++ b/CoffeeShop/Views/Home/Shop.cshtml
@@ -6,6 +6,7 @@
 
 @model ShopDBContext
 
+
 <h1>Welcome to the Shop</h1>
 
 <table>
@@ -14,20 +15,23 @@
         <th>Description</th>
         <th>Quantity</th>
         <th>Price</th>
+        <th>Purchase</th>
     </tr>
 
     @foreach (Items item in Model.Items)
     {
+
+
         <tr>
             <td>@item.Name</td>
             <td>@item.Description</td>
             <td>@item.Quantity</td>
-            <td>@item.Price</td>
+            <td>$@Math.Round(item.Price, 2)</td>
 
 
             @if ((bool)TempData["Registered"])
             {
-                <td><button>Buy</button></td>
+                <td><button onclick="location.href= '@Url.Action("Shop", "Home", new { price = item.Price })'" )">Buy</button></td>
             }
         </tr>
     }
