fixed shop, added cart details and delete, added more navigation

--- a/CoffeeShop/Views/Home/Index.cshtml
+++ b/CoffeeShop/Views/Home/Index.cshtml
@@ -9,3 +9,12 @@
     <h4>New user? Please register <a href="/Home/Registration">here</a>.</h4>
     <h4>Existing user? You can login <a href="/Home/Login">here</a>.</h4>
 </div>
+
+@*<form class="col-xl-12">
+    <div class="col-xl-4 col-lg-4">
+        <input type="text" class="col-xl-3 col-lg-6 col-md-4" />
+        <input type="text" class="col-xl-3 col-lg-6 col-md-4" />
+        <input type="text" class="col-xl-3 col-lg-6 col-md-4" />
+        <input type="submit" class="col-xl-3 col-lg-6 col-md-4" />
+    </div>
+</form>*@
