--- a/CoffeeShop/Views/Home/Registration.cshtml
+++ b/CoffeeShop/Views/Home/Registration.cshtml
@@ -38,6 +38,10 @@
         <input type="password" class="form-control" name="password" placeholder="Password" required />
     </div>
     <div class="form-group">
+        <label>Starting Funds</label>
+        <input type ="number" class="form-control" name="funds" required />
+    </div>
+    <div class="form-group">
         <input type="submit" class="form-control btn btn-primary" />
     </div>
 </form>
